# mpisvd

./: .gitignore  CMakeLists.txt  Makefile  comb_test.c  comb_test.py  compare.py  dist_svd.c  dist_svd_direct.c  full_svd.c  full_svd.cpp  gen_svd.c  mpi_svd.c  notes.txt  rand_svd.c  rand_svd2.c  run_fmi_tests.py  run_serial_tests.py  run_tests.py  seed_test.c  seed_test.py  serial_svd.c  svd_test.c  svd_test.py  svd_test_gen.c  svd_test_gen.cpp  test.py  test_comb.sh  test_comb_quick.py  test_full.sh  test_mpi_svd.py  test_seed.sh
fmisvd/: CMakeLists.txt  fmi_svd.cpp
fmisvd/inc/: mmio_dense.h
fmisvd/src/: fmi_wrapper.cpp  mmio.cpp  svd_fmi.cpp  svd_routines.cpp
inc/: fmi_wrapper.h  kiss.h  mmio_dense.h  svd_dist.h  svd_fmi.h  svd_routines.h  svd_serial.h
src/: kiss.c  linalg_routines.c  mmio.c  mmio_dense.c  mmio_dense.cpp  svd_dist.c  svd_dist.cpp  svd_fmi.cpp  svd_routines.c  svd_routines.cpp  svd_serial.c  svd_serial.cpp
